<resources>
    <string name="app_name">University of Maximegalon</string>

    <string name="title_activity_login">MaximegalOnline</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter your user mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid [must be more than 8 chars]</string>
    <string name="error_invalid_password">This password is too short [must be more than 8 chars]</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to course selection -->
    <string name="title_activity_term">Term</string>
    <!-- Default values as they will be overwritten by the RecyclerView -->
    <string name="term_semester">Winter</string>
    <string name="term_year">2018</string>

    <string name="action_more">more</string>
    <string name="action_menu">menu</string>
    <string name="tab_text_1">Courses</string>
    <string name="tab_text_2">Schedule</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Log Out</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="logout_name">Log Out</string>

    <string name="title_activity_resetpass">Reset Password</string>
    <string name="title_activity_register">Register</string>

    <!-- formatting string -->
    <string name="time_spacer"> - </string>

    <!-- course info activity default string -->
    <string name="professor_title">PROFESSOR</string>
    <string name="professor_default_content">TBD</string>
    <string name="description_title">DESCRIPTION</string>
    <string name="description_default_content">No description available.</string>
    <string name="prerequisites_title">PREREQUISITES</string>
    <string name="prerequisites_default_content">No prerequisites listed.</string>
    <string name="sections_title">SECTIONS</string>
</resources>
